fix: alignment of menu hamburger

--- a/src/styles/components/Layout/Header.module.css
+++ b/src/styles/components/Layout/Header.module.css
@@ -89,6 +89,18 @@
   border-radius: 36px;
 }
 
+.header-container .currencies {
+  width: 80px;
+  top: 50%;
+  left: 0;
+  transform: translateY(20%);
+}
+
+.header-container .currencies select {
+  border: none;
+  font-size: 12px;
+}
+
 @media (min-width: 700px) {
   .header-container {
     padding: 10px 0 38px 0;
